@@ -5,6 +5,7 @@ Amend property lookup so that Ant properties appear as entries in the Gant bindi
 directly accessible as variables -- no need any more for ant.project.properties.skipTests, can just use
 skipTests.  Where there is a name conflict Groovy variables take precedence over Ant properties.
 
+Added the nested <definition> tag to the Gant Ant task so as to allow -D... parameters to be specified.
 
 
 1.4.0 ( r9604 )
